[package]
name = "lnpbp"
version = "0.6.0-rc.1"
license = "MIT"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "LNP/BP Core Library implementing LNPBP specifications & standards"
repository = "https://github.com/LNP-BP/rust-lnpbp"
homepage = "https://github.com/LNP-BP"
keywords = ["bitcoin", "lightning", "lnp-bp", "layer-3", "cryptography"]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"
edition = "2018"
exclude = [".github", "contrib"]

[lib]
name = "lnpbp"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "lnpbp"
path = "src/bin/lnpbp.rs"
required-features = ["cli"]

[dependencies]
amplify = { version = "3.12.0", features = ["stringly_conversions", "std"] }
lnpbp_bech32 = { version = "0.6.0-rc.1", path = "bech32" }
lnpbp_chain = { version = "0.6.0-rc.1", path = "chain" }
lnpbp_elgamal = { version = "0.6.0", path = "elgamal", optional = true }
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.8", features = ["hex"], optional = true }
# serde_with_macros = { version = "~1.2.0", optional = true } # Fix for the problem in 1.3.0
clap = { version = "3.1.6", features = ["derive"], optional = true }
serde_yaml = { version = "0.8", optional = true }
serde_json = { version = "1", optional = true }
base64-compat = { version = "1", optional = true } # Used by cli only
base58 = { version = "0.2", optional = true } # Used by cli only

[features]
default = ["zip"]
all = ["serde", "elgamal", "zip", "cli"]
cli = ["clap", "serde", "base64-compat", "base58", "serde_yaml", "serde_json", "amplify/hex"]
serde = ["serde_crate", "serde_with", "amplify/serde",
         "lnpbp_bech32/serde", "lnpbp_chain/serde"]
elgamal = ["lnpbp_elgamal"] # Provides ElGamal encryption module from this library
zip = ["lnpbp_bech32/zip"]
all_msrv47 = ["serde", "elgamal", "zip"] # Used in testing against MSRV 1.47

[workspace]
members = [".", "bech32", "chain", "elgamal"]
default-members = [".", "bech32", "chain", "elgamal"]
