[package]
name = "lnpbp"
version = "0.9.0-alpha.2"
license = "MIT"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "LNP/BP Core Library implementing LNPBP specifications & standards"
repository = "https://github.com/LNP-BP/rust-lnpbp"
homepage = "https://github.com/LNP-BP"
keywords = ["bitcoin", "lightning", "lnp-bp", "layer-3", "cryptography"]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"
edition = "2021"
exclude = [".github", "contrib"]

[lib]
name = "lnpbp"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "lnpbp"
path = "src/bin/lnpbp.rs"
required-features = ["cli"]

[dependencies]
amplify = { version = "3.13.0", features = ["stringly_conversions", "std"] }
strict_encoding = "2.0.0-alpha.2"
lnpbp_bech32 = { version = "0.9.0-alpha.1", path = "bech32" }
lnpbp_chain = { version = "0.9.0-alpha.1", path = "chain" }
lnpbp_elgamal = { version = "0.9.0", path = "elgamal", optional = true }
lnpbp_identity = { version = "0.9.0-beta.1", path = "identity", optional = true }
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.8", features = ["hex"], optional = true }
# serde_with_macros = { version = "~1.2.0", optional = true } # Fix for the problem in 1.3.0
clap = { version = "~3.1.18", features = ["derive"], optional = true } # Used by cli only
serde_yaml = { version = "0.9", optional = true } # Used by cli only
serde_json = { version = "1", optional = true } # Used by cli only
base64-compat = { version = "1", optional = true } # Used by cli only
base58 = { version = "0.2", optional = true } # Used by cli only
colorize = { version = "0.1.0", optional = true } # Used by cli only

[features]
default = ["zip"]
all = ["serde", "elgamal", "identity", "zip", "cli"]
cli = ["clap", "serde", "identity", "base64-compat", "base58", "serde_yaml", "serde_json", "amplify/hex", "colorize"]
serde = ["serde_crate", "serde_with", "amplify/serde",
         "lnpbp_bech32/serde", "lnpbp_chain/serde"]
identity = ["lnpbp_identity"]
elgamal = ["lnpbp_elgamal"] # Provides ElGamal encryption module from this library
zip = ["lnpbp_bech32/zip"]

[workspace]
members = [".", "bech32", "chain", "elgamal", "identity"]
default-members = [".", "bech32", "chain", "elgamal", "identity"]
