[package]
name = "lnpbp_bech32"
version = "0.5.0-beta.2"
license = "MIT"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "LNPBP-14 implementation"
repository = "https://github.com/LNP-BP/rust-lnpbp"
homepage = "https://github.com/LNP-BP/tree/master/bech32"
keywords = ["bitcoin", "lightning", "lnp-bp", "lnpbp-7", "bech32"]
categories = ["cryptography::cryptocurrencies"]
edition = "2018"

[dependencies]
amplify = "3.8.1"
bitcoin_hashes = "0.10.0"
strict_encoding = "1.6.0"
bech32 = "0.8.1"
deflate = { version = "0.8.6", optional = true }
inflate = { version = "0.4.5", optional = true }
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.8", features = ["hex"], optional = true }
# serde_with_macros = { version = "1.2.0", optional = true } # Fix for the problem in 1.3.0

[features]
default = []
all = ["zip", "serde"]
zip = ["inflate", "deflate"]
serde = ["serde_crate", "serde_with", "bitcoin_hashes/serde", "amplify/serde"]
