[package]
name = "lnpbp_bech32"
version = "0.6.0-rc.1"
license = "MIT"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "LNPBP-14 implementation"
repository = "https://github.com/LNP-BP/rust-lnpbp"
homepage = "https://github.com/LNP-BP/tree/master/bech32"
keywords = ["bitcoin", "lightning", "lnp-bp", "lnpbp-7", "bech32"]
categories = ["cryptography::cryptocurrencies"]
edition = "2018"

[dependencies]
amplify = "3.12.0"
bitcoin_hashes = "0.10.0"
strict_encoding = "1.8.0-rc.1"
bech32 = "0.8.1"
deflate = { version = "1.0.0", optional = true }
inflate = { version = "0.4.5", optional = true }
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.8", features = ["hex"], optional = true }

[features]
default = []
all = ["zip", "serde"]
zip = ["inflate", "deflate"]
serde = ["serde_crate", "serde_with", "bitcoin_hashes/serde", "amplify/serde"]
