[package]
name = "lnpbp_bech32"
version = "0.9.0"
license = "MIT"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "LNPBP-14 implementation"
repository = "https://github.com/LNP-BP/rust-lnpbp"
homepage = "https://github.com/LNP-BP/rust-lnpbp/tree/master/bech32"
keywords = ["bitcoin", "lightning", "lnp-bp", "lnpbp-14", "bech32"]
categories = ["cryptography::cryptocurrencies"]
edition = "2021"

[dependencies]
amplify = "3.13.0"
bitcoin_hashes = "0.11.0"
strict_encoding = "0.9.0"
bech32 = "0.9.1"
deflate = { version = "1.0.0", optional = true }
inflate = { version = "0.4.5", optional = true }
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.14", features = ["hex"], optional = true }

[features]
default = []
all = ["zip", "serde"]
zip = ["inflate", "deflate"]
serde = ["serde_crate", "serde_with", "bitcoin_hashes/serde", "amplify/serde"]
