[package]
name = "lnpbp_chain"
version = "0.5.0"
license = "MIT"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "LNPBP library defining chain parameters"
repository = "https://github.com/LNP-BP/rust-lnpbp"
homepage = "https://github.com/LNP-BP/tree/master/chain"
keywords = ["bitcoin", "lightning", "lnp-bp", "blockchain", "sidechain"]
categories = ["cryptography::cryptocurrencies"]
edition = "2018"

[dependencies]
amplify = "3.9.1"
bitcoin = "0.27.1"
bitcoin_hashes = "0.10.0"
strict_encoding = "1.7.4"
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.8", features = ["hex"], optional = true }
lazy_static = "1.4.0" # TODO: #213 Remove dependency

[features]
serde = ["serde_crate", "serde_with", "bitcoin_hashes/serde", "bitcoin/use-serde"]
