[package]
name = "lnpbp_chain"
version = "0.9.0"
license = "MIT"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "LNPBP library defining chain parameters"
repository = "https://github.com/LNP-BP/rust-lnpbp"
homepage = "https://github.com/LNP-BP/rust-lnpbp/tree/master/chain"
keywords = ["bitcoin", "lightning", "lnp-bp", "blockchain", "sidechain"]
categories = ["cryptography::cryptocurrencies"]
edition = "2021"

[dependencies]
amplify = "3.13.0"
bitcoin_hashes = "0.11.0" # We need macro from here
bitcoin = "0.29.2"
strict_encoding = "0.9.0"
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.14", features = ["hex"], optional = true }
once_cell = "1.10.0"

[dev-dependencies]
strict_encoding_test = "0.9.0"

[features]
serde = ["serde_crate", "serde_with", "bitcoin_hashes/serde", "bitcoin/serde"]
