[package]
name = "client_side_validation"
version = "0.4.0-beta"
license = "Apache-2.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "Client-side validation library"
repository = "https://github.com/LNP-BP/rust-lnpbp"
homepage = "https://github.com/LNP-BP"
keywords = ["lnp-bp", "cryptocurrency", "smart-contracts"]
categories = ["cryptography::cryptocurrencies", "encoding", "parsing"]
readme = "README.md"
edition = "2018"
exclude = ["derive"]

[lib]
name = "client_side_validation"
path = "src/lib.rs"
crate-type = ["dylib", "rlib", "staticlib"]

[dependencies]
amplify = "3"
amplify_derive = "2.4.3"
strict_encoding = { version = "1", features = [] }
bitcoin_hashes = "0.9"
grin_secp256k1zkp = { version = "0.7", optional = true }

[features]
default = []
all = ["bulletproofs"]
bulletproofs = ["grin_secp256k1zkp"]
