[package]
name = "lnpbp_elgamal"
version = "0.6.0"
license = "MIT"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "LNPBP-31: "
repository = "https://github.com/LNP-BP/rust-lnpbp"
homepage = "https://github.com/LNP-BP/tree/master/elgamal"
keywords = ["bitcoin", "lnp-bp", "elgamal", "secp256k1"]
categories = ["cryptography"]
edition = "2018"

[dependencies]
amplify = "3.12.0"
secp256k1 = "0.22.1"
bitcoin_hashes = "0.10.0"

[dev-dependencies]
secp256k1 = { version = "0.22.1", features = ["rand-std", "global-context"] }
