[package]
name = "lnpbp_elgamal"
version = "0.9.0"
license = "MIT"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "LNPBP-31: ElGamal symmetric encryptiion library with Secp256k1 curve"
repository = "https://github.com/LNP-BP/rust-lnpbp"
homepage = "https://github.com/LNP-BP/rust-lnpbp/tree/master/elgamal"
keywords = ["bitcoin", "lnp-bp", "elgamal", "secp256k1"]
categories = ["cryptography"]
edition = "2021"

[dependencies]
amplify = "3.13.0"
secp256k1 = "0.24.2"
bitcoin_hashes = "0.11.0"

[dev-dependencies]
secp256k1 = { version = "0.24.2", features = ["rand-std", "global-context"] }
