[package]
name = "lnpbp_identity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amplify = "4.0.0-alpha.1"
secp256k1 = "0.24.1"
strict_encoding = "2.0.0-alpha.2"
bech32 = "0.9.1"
crc32fast = "1.3.2"
mnemonic = "1.0.1"
bitcoin_hashes = "0.11.0"

[dev-dependencies]
secp256k1 = { version = "0.24.1", features = ["rand"] }