[package]
name = "paradigms"
version = "0.1.0-beta"
license = "MIT"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "LNP/BP Core Library derive macros"
repository = "https://github.com/LNP-BP/rust-lnpbp"
homepage = "https://github.com/LNP-BP"
keywords = ["bitcoin", "lightning", "lnp-bp", "layer-3", "cryptography"]
readme = "README.md"
edition = "2018"

[lib]
name = "paradigms"

[dependencies]
amplify = "~0.1.6"
derive_wrapper = "~0.1.6"
async-trait = { version = "~0.1.30", optional = true }
bitcoin = { git = "https://github.com/LNP-BP/rust-bitcoin", branch = "staging" }
bitcoin_hashes = { git = "https://github.com/LNP-BP/bitcoin_hashes", branch = "staging" }
# This strange naming is a workaround for not being able to define required features for a dependency
# See https://github.com/rust-lang/api-guidelines/issues/180 for the explanation and references.
serde_crate = { package = "serde", version = "~1.0.106", features = ["derive"], optional = true }

[features]
serde = ["serde_crate", "bitcoin/use-serde", "amplify/serde"]
async = ["async-trait"]
