[package]
name = "lnpbp_paradigms"
version = "0.1.0"
license = "MIT"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "LNP/BP Core Library: paradigms implementation"
repository = "https://github.com/LNP-BP/rust-lnpbp"
homepage = "https://github.com/LNP-BP"
keywords = ["bitcoin", "lightning", "lnp-bp", "layer-3", "cryptography"]
readme = "README.md"
edition = "2018"

[lib]
name = "lnpbp_paradigms"
path = "src/lib.rs"

[dependencies]
amplify = { version = "=1.0.0-beta.1", features = ["serde", "std"] }
amplify_derive = "=1.0.0-beta.1"
bitcoin = { git = "https://github.com/LNP-BP/rust-bitcoin", branch = "develop", features = [] }
bitcoin_hashes = { git = "https://github.com/LNP-BP/bitcoin_hashes", tag = "lnpbp-v0.1.0-beta-4" } # we need macro from here

[features]
